--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -5,9 +5,9 @@ $accent: hsl(277, 64%, 61%);
 
 @use 'reset';
 
-@mixin Flex {
+@mixin Flex ($direction) {
     display: flex;
-    flex-direction: column;
+    flex-direction: $direction;
     align-items: center;
     justify-content: center;
 
@@ -16,33 +16,43 @@ $accent: hsl(277, 64%, 61%);
 body {
     background-color: $mainbackground;
 
-    @include Flex();
-    gap: 2rem;
+    @include Flex(column);
+    gap: 1.5rem;
 }
 
+
+//Main Styling Section
 .main-container {
     max-width: 21rem;
 }
 
+//Background blend for image
 .image-style {
-    border-radius: 12px;
+    background-color: hsl(285, 77%, 45%);
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+}
+
+img {
+    mix-blend-mode: multiply;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
 }
 
 .card-wrapper {
-    @include Flex();
+    @include Flex(column);
     background-color: $cardbackground;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-    padding: 16px;
+    padding: 32px;
 }
 
 .top-content {
     h1 {
         font-size: 2rem;
         text-wrap: balance;
-
-        padding-top: 12px;
-        padding-bottom: 24px;
+  
+        padding-bottom: 8px;
 
     }
 
@@ -52,14 +62,18 @@ body {
 
     p {
         color: hsla(0, 0%, 100%, 0.75);
+        font-size: 0.875rem;
+        padding: 16px;
         padding-bottom: 24px;
     }
 }
 
 .statistics {
+    @include Flex(column);
 
     p {
         font-weight: 700;
+        font-size: 1.25rem;
     }
 
     span {
@@ -73,4 +87,63 @@ body {
     .stat3 {
         padding-bottom: 16px;
     }
+}
+
+@mixin Grid($columns, $rows) {
+    display: grid;
+    grid-template-columns: repeat($columns, 1fr);
+    grid-template-rows: repeat($rows, 1fr);
+}
+
+@media (min-width: 50rem) {
+    .main-container {
+        max-width: 56rem;
+    }
+
+    main {
+        @include Grid(2, 1);
+    }
+
+    .image-style {
+        border-top-left-radius: 0;
+
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+
+    img {
+        border-top-left-radius: 0;
+
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+
+    .top-content {
+        text-align: left;
+
+        p {
+            padding: 0;
+        }
+    }
+
+    .card-wrapper {
+        grid-area: 1/1/2/2;
+        justify-content: space-between;
+        padding: 48px;
+
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+
+    .statistics {
+        @include Flex(row);
+        gap: 6rem;
+
+        .stat1,
+        .stat2,
+        .stat3 {
+            padding: 0;
+        }
+    }
+
 }
